1.1.27
- Fix Issue #181: Add check for older android for isDestroyed().

1.1.26
- Add option to download high resolution cover image.

1.1.25
- Fix Issue #173: Update parser to handle external chapter.
- Fix issue #174: Novel cover scaling.
- Wrap image viewer in html to allow better scaling.
- Refactor DisplayNovelContentActivity and BakaTsukiWebViewClient.
- Add Browser Back for external pages, may only works for KitKat+.
- Fix Issue #175: Prev/Next loading.

1.1.24
- Fix Issue #169: Keep current image after screen rotation.
- Fix Issue #170: Crash when scrolling chapter list.
- Fix Issue #171: Keep chapter color when scrolling.
- Optimize search loading.
- Update SDK to v21 (Android 5.0)

1.1.23
- Fix Issue #166: External Url anchor handling.
- Update relink logger text.
- Update logic for download all novel info.
- Update chapter listing to show actual url for external chapter.

1.1.21
- Update jsoup to 1.8.1.
- Add option to refresh all downloaded chapter on novel details.
- Performance updates and bug fixes.
- Update Custom Color pref for older android (API < 11).
- Update relink image, output log to image folder.
- Add filter in Update Activity for external chapter.

1.1.20
- Fix issue #162: update relink image task to cater encoded/decoded image filename
- Add feature to choose custom color from settings.
- Fix issue #160 & #163: Update Text-To-Speech Service binding.
- Add option to enable Text-To-Speech Service (default is disabled).
- Fix issue #156: handle deleted chapter in bookmark.

1.1.19
- Implement feature #153: clear all bookmark on chapter.
- Fix issue #154: remove '+[] from forbiden char for filename.
- Update css to force fit-to-width for non-thumbnailed image.
- Set useragent for WebView to mobile version.
- Implement feature #152: Add download icon for external page.
- Fix issue #152: Update delete chapter logic for external page.
- Fix issue #155 and #158: fix Update Service.
- Fix issue #157: Update polish translation.